fixed wepik overflow

--- a/src/components/Home/Wepik/wepik.scss
+++ b/src/components/Home/Wepik/wepik.scss
@@ -3,6 +3,7 @@
   background-color: #f8fafb;
   padding: 25px 0 0px 0;
   margin: 20px 0 40px 0;
+  overflow: hidden;
 }
 .wepik-header {
   line-height: 1.9;
